# graph-rag-traffic-law

./: .dockerignore  .env.example  Dockerfile  docker-compose-prod.yml  docker-compose.yml  ingest.py  law.txt  main.py  pyproject.toml  spliter.py
app/api/routes/: chat.py
app/core/: config.py  database.py
app/schemas/: chat.py
app/services/: chat_service.py  ingest_service.py
